Création des dernières View

--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -78,7 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
+            android:text="@string/columnExpiration"
             android:id="@+id/textView5"
             android:layout_below="@+id/textTitleContainer"
             android:layout_alignParentRight="true"
@@ -90,7 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
+            android:text="@string/columnQty"
             android:id="@+id/textView2"
             android:layout_toRightOf="@+id/listViewNameFood"
             android:layout_toLeftOf="@+id/listViewDateFood"
@@ -102,7 +102,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
+            android:text="@string/columnName"
             android:id="@+id/textView3"
             android:layout_below="@+id/textTitleContainer"
             android:layout_alignParentLeft="true"
