--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -80,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/validateBtn"
-        android:id="@+id/button"
+        android:id="@+id/completeSearchBtn"
         android:layout_below="@+id/seekBarNbDays"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="27dp" />
