--- a/app/src/main/res/menu/menu_search_result.xml
+++ b/app/src/main/res/menu/menu_search_result.xml
@@ -4,4 +4,8 @@
     tools:context="com.henallux.alex.fapp.SearchResultActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/searchBtn"
+        android:icon="@drawable/ic_action_search"
+        android:title="always"
+        app:showAsAction="always"/>
 </menu>
