--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,49 +5,51 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AccueilActivity">
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_centerHorizontal="true"
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="@string/app_name"
+        android:id="@+id/textView"
         android:layout_alignParentTop="true"
-        android:id="@+id/relativeLayoutAccueil">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/app_name"
-            android:id="@+id/textView"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/containerGrid"
+        android:layout_below="@+id/textView"
+        android:layout_above="@+id/layoutAddContainer" />
 
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/containerGrid"
-            android:layout_below="@+id/textView"
-            android:layout_above="@+id/addNewContText" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/addContainer"
+        android:id="@+id/addContainerBtn"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/addContainer"
-            android:id="@+id/addContainerBtn"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/addContainerBtn"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/layoutAddContainer">
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/addNewContText"
-            android:layout_above="@+id/addContainerBtn"
-            android:layout_alignLeft="@+id/addContainerBtn"
-            android:layout_alignStart="@+id/addContainerBtn"
-            android:layout_alignRight="@+id/addContainerBtn"
-            android:layout_alignEnd="@+id/addContainerBtn"
-            android:text="@string/newContEditText" />
-    </RelativeLayout>
+            android:hint="@string/newContEditText"
+            android:singleLine="true"/>
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinnerTypeContainer"
+            android:entries="@array/type_container"
+            android:prompt="@string/type_container_prompt" />
+    </LinearLayout>
 </RelativeLayout>
