--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -3,4 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".AccueilActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/searchBtn"
+        android:icon="@drawable/ic_action_search"
+        android:title="always"
+        app:showAsAction="always"/>
+    <item android:id="@+id/homeBtn"
+        android:icon="@drawable/ic_launcher"
+        android:title="always"
+        app:showAsAction="always"/>
 </menu>
