--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,4 +3,8 @@
     <color name="color_freezer">#00a3e9</color>
     <color name="color_congel">#d9d9d9</color>
     <color name="color_attention">#ffff220d</color>
+    <color name="color_unless2Weeks">#FF3300</color>
+    <color name="color_unless5days">#CC0000</color>
+    <color name="color_inedible">#000000</color>
+    <color name="color_normal_item">#FFFFFF</color>
 </resources>
