--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -12,71 +12,47 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/app_name"
         android:id="@+id/titleApp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/columnName"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/titleApp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/columnContainer"
-        android:id="@+id/textView6"
-        android:layout_below="@+id/titleApp"
         android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/columnExpiration"
-        android:id="@+id/textView7"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/columnName"
+        android:id="@+id/colItemName"
         android:layout_below="@+id/titleApp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_below="@+id/textView4"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignBottom="@+id/listView2"
-        android:layout_toLeftOf="@+id/textView6"
-        android:layout_toStartOf="@+id/textView6" />
+        android:width="100dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/columnQty"
+        android:id="@+id/colItemType"
+        android:layout_below="@+id/titleApp"
+        android:layout_toRightOf="@+id/colItemName"
+        android:layout_toEndOf="@+id/colItemName"
+        android:width="100dp"
+        android:singleLine="false" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/columnExpiration"
+        android:id="@+id/colItemExpiredDate"
+        android:layout_alignTop="@+id/colItemType"
+        android:layout_toRightOf="@+id/colItemType"
+        android:layout_toEndOf="@+id/colItemType"/>
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/listView2"
-        android:layout_below="@+id/textView6"
-        android:layout_alignLeft="@+id/textView6"
-        android:layout_alignStart="@+id/textView6"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/listView3"
-        android:layout_toStartOf="@+id/listView3" />
+        android:id="@+id/listViewItems"
+        android:layout_below="@+id/colItemName"
+        android:layout_above="@+id/layoutAddItem"
+        android:layout_marginTop="20dp" />
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView3"
-        android:layout_below="@+id/textView7"
-        android:layout_alignRight="@+id/textView7"
-        android:layout_alignEnd="@+id/textView7"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/textView7"
-        android:layout_alignStart="@+id/textView7" />
 </RelativeLayout>
